--- a/kerberos_asn1/Cargo.toml
+++ b/kerberos_asn1/Cargo.toml
@@ -11,6 +11,7 @@ repository.workspace = true
 himmelblau_kerberos_constants = { workspace = true }
 
 red_asn1 = "0.3"
+# red_asn1_derive includes the failure crate in the Cargo.toml, but doesn't use it anywhere
 red_asn1_derive = "0.2"
 chrono = "0.4"
 
