--- a/kerberos_ccache/Cargo.toml
+++ b/kerberos_ccache/Cargo.toml
@@ -11,11 +11,11 @@ repository.workspace = true
 himmelblau_kerberos_constants = { workspace = true }
 himmelblau_kerberos_asn1 = { workspace = true }
 
-failure = "0.1"
 failure_derive = "0.1"
 
 nom = "7"
 chrono = "0.4"
+thiserror = "1.0.61"
 
 [lints.clippy]
 needless_return = "allow"
